<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginRight="12dp"
             android:layout_marginEnd="12dp"
             android:id="@+id/secondaryActionButton"
             android:background="?selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="false"
             android:focusableInTouchMode="false" >

    <ImageView
            android:id="@+id/secondaryActionIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            tools:src="@sample/secondaryaction"/>

    <com.explorads.podcast.ui.common.CircularProgressBar
            android:id="@+id/secondaryActionProgress"
            android:layout_width="40dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            app:foregroundColor="?attr/action_icon_color"/>
</FrameLayout>
