...
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_feed_shortcut"
        android:shortcutId="episodes"
        android:shortcutShortLabel="@string/episodes_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.explorads.podcast.activity.MainActivity"
            android:targetPackage="com.explorads.podcast">
            <extra
                android:name="fragment_tag"
...
